--- a/index.html
+++ b/index.html
@@ -6,23 +6,45 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vacariuc Alexandr">
     <meta name="description" content="Simple model of website intendet to learn the basics of HTML and CSS ">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" href="icon/icon.png" type="image/png">
+    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="style/normalize.css" type="text/css">
+    <link rel="icon" href="images/head/icon.png" type="image/png">
 </head>
 
 <body>
-<section class="nav-bar">
-    <div class="left-block">
-        <img src="icon/icon.png" alt="Logo">
-        <p>Noren.</p>
-    </div>
-    <div class="right-block">
-        <a href="#">Home</a>
-        <a href="#">Service</a>
-        <a href="#">Team</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-    </div>
-</section>
+    <nav class="nav-bar">
+        <div class="nav-bar-left-block">
+            <img src="images/head/icon.png" alt="Logo">
+            <p>Noren.</p>
+        </div>
+        <div class="nav-bar-right-block">
+            <a href="#">Home</a>
+            <a href="#">Service</a>
+            <a href="#">Team</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
+
+    <section class="intro">
+        <div class="intro-content-block">
+            <h1>Get business solution</h1>
+            <p>Power your business to new heights with our award-winning digital marketing service and technology platform.</p>
+            <button>Get Started</button>
+        </div>
+        <div class="intro-image-block">
+            <img src="images/intro/intro.png" alt="Content"/>
+        </div>
+    </section>
+
+    <section class="partners">
+        <img src="images/partners/nike.png" alt="Nike"/>
+        <img src="images/partners/google.png" alt="Google"/>
+        <img src="images/partners/coca-cola.png" alt="Coca cola"/>
+        <img src="images/partners/pepsi.png" alt="Pepsi"/>
+        <img src="images/partners/microsoft.png" alt="Microsoft"/>
+    </section>
+
+
 </body>
 </html>
