Create options section

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>Noren</title>
     <meta charset="UTF-8">
-    <meta name="author" content="Vacariuc Alexandr">
+    <meta name="author"      content="Vacariuc Alexandr">
     <meta name="description" content="Simple model of website intendet to learn the basics of HTML and CSS ">
-    <link rel="stylesheet" href="style/style.css" type="text/css">
-    <link rel="stylesheet" href="style/normalize.css" type="text/css">
-    <link rel="icon" href="images/head/icon.png" type="image/png">
+    <link rel="stylesheet" href="style/style.css"      type="text/css">
+    <link rel="stylesheet" href="style/normalize.css"  type="text/css">
+    <link rel="icon"       href="images/head/icon.png" type="image/png">
 </head>
 
 <body>
@@ -45,6 +45,23 @@
         <img src="images/partners/microsoft.png" alt="Microsoft"/>
     </section>
 
+    <section class="options">
+        <div class="option">
+            <img src="images/options/statistics.png" alt="Option">
+            <h2 class="option-visible">Grow your traffic</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="option">
+            <img src="images/options/chart.png" alt="Option">
+            <h2 class="option-visible">Get quality leads</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="option ">
+            <img src="images/options/bag.png" alt="Option">
+            <h2 class="option-hidden">Drive more sales</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </section>
 
 </body>
 </html>
