Create we take care section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <nav class="nav-bar">
-        <div class="nav-bar-left-block">
+        <div class="left-block">
             <img src="images/head/icon.png" alt="Logo">
             <p>Noren.</p>
         </div>
-        <div class="nav-bar-right-block">
+        <div class="right-block">
             <a href="#">Home</a>
             <a href="#">Service</a>
             <a href="#">Team</a>
@@ -27,12 +27,12 @@
     </nav>
 
     <section class="intro">
-        <div class="intro-content-block">
+        <div class="content">
             <h1>Get business solution</h1>
             <p>Power your business to new heights with our award-winning digital marketing service and technology platform.</p>
             <button>Get Started</button>
         </div>
-        <div class="intro-image-block">
+        <div class="image">
             <img src="images/intro/intro.png" alt="Content"/>
         </div>
     </section>
@@ -48,18 +48,38 @@
     <section class="options">
         <div class="option">
             <img src="images/options/statistics.png" alt="Option">
-            <h2 class="option-visible">Grow your traffic</h2>
+            <h2>Grow your traffic</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="option">
             <img src="images/options/chart.png" alt="Option">
-            <h2 class="option-visible">Get quality leads</h2>
+            <h2>Get quality leads</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="option ">
             <img src="images/options/bag.png" alt="Option">
-            <h2 class="option-hidden">Drive more sales</h2>
+            <h2>Drive more sales</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </section>
+
+    <section class="we-take-care">
+        <img src="images/we-take-care/we-take-care.png" alt="We take care">
+        <div>
+            <h1>We take care of your</h1>
+            <p>Power your business to new heights with our award-winning digital marketing service and technology platform.</p>
+            <div class="enum-block colored">
+                <div class="circle red"><span>1</span></div>
+                <h3>Power your business to new heights with our award-winning</h3>
+            </div>
+            <div class="enum-block transparent">
+                <div class="circle yellow"><span>2</span></div>
+                <h3>Our award-winning digital marketing service and</h3>
+            </div>
+            <div class="enum-block colored">
+                <div class="circle blue"><span>3</span></div>
+                <h3>Business to new heights with our award-winning digital</h3>
+            </div>
         </div>
     </section>
 
