--- a/index.html
+++ b/index.html
@@ -4,84 +4,94 @@
 <head>
     <title>Noren</title>
     <meta charset="UTF-8">
-    <meta name="author"      content="Vacariuc Alexandr">
+    <meta name="author" content="Vacariuc Alexandr">
     <meta name="description" content="Simple model of website intendet to learn the basics of HTML and CSS ">
-    <link rel="stylesheet" href="style/style.css"      type="text/css">
-    <link rel="stylesheet" href="style/normalize.css"  type="text/css">
-    <link rel="icon"       href="images/head/icon.png" type="image/png">
+    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="style/normalize.css" type="text/css">
+    <link rel="icon" href="images/icons/header_icon.png" type="image/png">
 </head>
 
 <body>
-    <nav class="nav-bar">
-        <div class="left-block">
-            <img src="images/head/icon.png" alt="Logo">
-            <p>Noren.</p>
-        </div>
-        <div class="right-block">
-            <a href="#">Home</a>
-            <a href="#">Service</a>
-            <a href="#">Team</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-        </div>
-    </nav>
+<nav class="nav-bar">
+    <div class="left-block">
+        <img src="images/icons/header_icon.png" alt="Logo">
+        <p>Noren.</p>
+    </div>
+    <div class="right-block">
+        <a href="#">Home</a>
+        <a href="#">Service</a>
+        <a href="#">Team</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </div>
+</nav>
 
-    <section class="intro">
-        <div class="content">
-            <h1>Get business solution</h1>
-            <p>Power your business to new heights with our award-winning digital marketing service and technology platform.</p>
-            <button>Get Started</button>
-        </div>
-        <div class="image">
-            <img src="images/intro/intro.png" alt="Content"/>
-        </div>
-    </section>
+<section class="intro">
+    <div class="content">
+        <h1>Get business solution</h1>
+        <p>Power your business to new heights with our award-winning digital marketing service and technology
+            platform.</p>
+        <button>Get Started</button>
+    </div>
+    <div class="image">
+        <img src="images/intro/intro.png" alt="Content"/>
+    </div>
+</section>
 
-    <section class="partners">
-        <img src="images/partners/nike.png" alt="Nike"/>
-        <img src="images/partners/google.png" alt="Google"/>
-        <img src="images/partners/coca-cola.png" alt="Coca cola"/>
-        <img src="images/partners/pepsi.png" alt="Pepsi"/>
-        <img src="images/partners/microsoft.png" alt="Microsoft"/>
-    </section>
+<section class="partners">
+    <img src="images/partners/nike.png" alt="Nike"/>
+    <img src="images/partners/google.png" alt="Google"/>
+    <img src="images/partners/coca-cola.png" alt="Coca cola"/>
+    <img src="images/partners/pepsi.png" alt="Pepsi"/>
+    <img src="images/partners/microsoft.png" alt="Microsoft"/>
+</section>
 
-    <section class="options">
-        <div class="option">
-            <img src="images/options/statistics.png" alt="Option">
-            <h2>Grow your traffic</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </div>
-        <div class="option">
-            <img src="images/options/chart.png" alt="Option">
-            <h2>Get quality leads</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </div>
-        <div class="option ">
-            <img src="images/options/bag.png" alt="Option">
-            <h2>Drive more sales</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </div>
-    </section>
+<section class="options">
+    <div class="option">
+        <img src="images/options/statistics.png" alt="Option">
+        <h2>Grow your traffic</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+    <div class="option">
+        <img src="images/options/chart.png" alt="Option">
+        <h2>Get quality leads</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+    <div class="option ">
+        <img src="images/options/bag.png" alt="Option">
+        <h2>Drive more sales</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+</section>
 
-    <section class="we-take-care">
-        <img src="images/we-take-care/we-take-care.png" alt="We take care">
-        <div>
-            <h1>We take care of your</h1>
-            <p>Power your business to new heights with our award-winning digital marketing service and technology platform.</p>
-            <div class="enum-block colored">
-                <div class="circle red"><span>1</span></div>
-                <h3>Power your business to new heights with our award-winning</h3>
-            </div>
-            <div class="enum-block transparent">
-                <div class="circle yellow"><span>2</span></div>
-                <h3>Our award-winning digital marketing service and</h3>
-            </div>
-            <div class="enum-block colored">
-                <div class="circle blue"><span>3</span></div>
-                <h3>Business to new heights with our award-winning digital</h3>
-            </div>
+<section class="we-take-care">
+    <img src="images/we-take-care/we-take-care.png" alt="We take care">
+    <div>
+        <h1>We take care of your</h1>
+        <p>Power your business to new heights with our award-winning digital marketing service and technology
+            platform.</p>
+        <div class="enum-block colored">
+            <div class="circle red"><span>1</span></div>
+            <h3>Power your business to new heights with our award-winning</h3>
         </div>
-    </section>
+        <div class="enum-block transparent">
+            <div class="circle yellow"><span>2</span></div>
+            <h3>Our award-winning digital marketing service and</h3>
+        </div>
+        <div class="enum-block colored">
+            <div class="circle blue"><span>3</span></div>
+            <h3>Business to new heights with our award-winning digital</h3>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="left-block">
+        <img src="images/icons/footer_icon.png" alt="Logo"/>
+        <p>Noren.</p>
+    </div>
+    <h3>2020 &copy; Ghassan Hani</h3>
+</footer>
 
 </body>
 </html>
