--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
     <img src="images/partners/microsoft.png" alt="Microsoft"/>
 </section>
 
+<section class="table-section" id="tableSection">
+    <table class="table">
+        <thead>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Phone Number</th>
+        <th>Email</th>
+        <th>Password</th>
+        <th>Gender</th>
+        <th>Job</th>
+        </thead>
+        <tbody id="tableSectionBody"></tbody>
+    </table>
+</section>
+
 <section class="options">
     <div class="option">
         <img src="images/options/statistics.png" alt="Option">
